--- a/src/app/student/form/form.component.html
+++ b/src/app/student/form/form.component.html
@@ -1,1 +1,14 @@
-<p>form works!</p>
+<form>
+    <div class="row">
+      <div class="col">
+        <input type="text" class="form-control" placeholder="Id">
+      </div>
+      <div class="col">
+        <input type="text" class="form-control" placeholder="Nom">
+      </div>
+      <div class="col">
+        <input type="text" class="form-control" placeholder="Note">
+      </div>
+    </div>
+  </form>
+  <a href="#" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Valider</a>
